<resources>
    <string name="app_name">Minha Rotina</string>

    //String da Pagina de Cadastro
    <string name="imagemUsuario">SELECIONAR FOTO</string>
    <string name="e_mail">E-mail:</string>
    <string name="nome">Nome:</string>
    <string name="dataNascimento">Data de Nascimento:</string>
    <string name="genero">Gênero:</string>
    <string name="senha">Senha:</string>
    <string name="senhaAreaResponsavel">Senha do Responsável:</string>
    <string name="cadastrar">CADASTRAR!</string>

    //Strings Página de Login
    <string name="cadastro">Não possui uma conta? </string>
    <string name="btCadastre">Cadastre-se</string>
    <string name="acesse">Ou acesse com:</string>
    <string name="button">Entrar</string>
    <string name="btAjuda">AJUDA</string>
    <string name="esqueciSenha">Esqueci minha senha</string>

    //Strings Página de Cadastro Atividade
    <string name="atividade">Atividade:</string>
    <string name="horario">Horário:</string>
    <string name="musica">Música:</string>
    <string name="dias_semana">Dias da Semana:</string>
    <string name="dom">DOM</string>
    <string name="seg">SEG</string>
    <string name="ter">TER</string>
    <string name="qua">QUA</string>
    <string name="qui">QUI</string>
    <string name="sex">SEX</string>
    <string name="sab">SÁB</string>
    <string name="btAddPasso">Adicionar Passo a Passo</string>
    <string name="btCadAtv">Cadastrar Atividade Apenas</string>

    //Strings Página Dashboard (menu)
    <string name="btEditar">EDITAR</string>
    <string name="btRotinaDiaria">MINHA ROTINA DE HOJE</string>
    <string name="btGerAtividades">GERENCIAR ROTINA</string>
    <string name="btAddAtividadeFora">ADICIONAR ATIVIDADE FORA DA ROTINA</string>
    <string name="btAtvsAgendadas">VER ATIVIDADES AGENDADAS</string>
    <string name="btRelatorioAtividades">RELATÓRIO ATIVIDADES</string>
    <string name="btVolMax">AJUSTAR VOLUME MÁXIMO</string>
    <string name="btEditarPreferencias">EDITAR PREFERÊNCIAS</string>
    <string name="btVoltarCrianca">VOLTAR PARA ESPAÇO INFANTIL</string>

    //Strings Página Atividade
    <string name="instrucaoAtv">Olá! São 8:00, hora de "Escovar os Dentes"!</string>
    <string name="brDispensar">Dispensar</string>
    <string name="brIniciar">Iniciar</string>

    //Página de minha rotina
    <string name="espacoPais">Espaço para Pais</string>
    <string name="compartilhar">Compartilhar Rotina</string>

    //Página Gerenciador de Atividades
    <string name="btGerEditar">EDITAR</string>
    <string name="btGerExcluir">EXCLUIR</string>
    <string name="btAdicionarAtividade">Adicionar Atividade</string>

    //Página Cadastrar Passo Atividade
    <string name="btFinalizar">Finalizar</string>
    <string name="btAddPassos">Adicionar Mais Passos</string>
    <string name="descricao">Descrição:</string>
    <string name="som">Som:</string>

    //Pagina Passo Atividade
    <string name="btOuvir">OUVIR</string>
    <string name="btAnterior">Anterior</string>
    <string name="btProximo">Próximo</string>
    <string name="btConcluido">Concluído!</string>

    //Pop up window
    <string name="btResponsavel">Acessar</string>
    <string name="senhaResponsavel">Informe a senha para acessar ao espaço dos responsáveis:</string>

    //Página Cadastro Atividade Fora da Rotina
    <string name="descricaoAtv">Descrição da atividade:</string>
    <string name="dataPreparacao">Data e Hora anterior para preparação:</string>
    <string name="horarioPreparacao">Horário para preparação:</string>
    <string name="data">Data:</string>

    //Página de calendário de atividades agendadas
    <string name="instrucoes">Selecione uma data para agendar uma nova atividade fora da rotina ou selecione as já agendadas nos dias circulados para saber mais.</string>


    //Pagina de cadastrar preferências
    <string name="instrucoes_preferencias">Informe algumas preferências da criança para auxiliar numa melhor rotina!</string>
    <string name="instrucoes_preferencias2">Por exemplo: desenhos, filmes, brinquedos e etc que goste mais.</string>
    <string name="ed_preferencias">Digite aqui as preferências...</string>

    //Página de selecionar atividade ou cadastrar nova
    <string name="instrucoes_atividades">Selecione uma das atividades abaixo para incluir ou crie uma nova:</string>
    <string name="btCriarnova">Criar Nova</string>

    //Popup confirmar deleteAtividade:
    <string name="deletar">Deseja realmente excluir esta atividade da rotina?</string>
    <string name="btCancelar">Cancelar</string>
    <string name="btExcluir">Excluir</string>

    //Página de edição de atividade
    <string name="btAtualizar">Atualizar!</string>
    <string name="passos">Passo a Passo:</string>

    //Página incluir atividade base:
    <string name="btIncluir">Incluir Atividade!</string>

    //Pagina Relatório Atividades
    <string name="relatorioAtividades">RELATÓRIO ATIVIDADES</string>
</resources>