<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DashboardActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/icon_user" />

            <Button
                android:id="@+id/btAjuda"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentStart="false"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_round_border"
                android:drawableRight="@android:drawable/ic_menu_help"
                android:text="@string/btAjuda" />

            <Button
                android:id="@+id/btEditar"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@+id/imgIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_round_border"
                android:drawableRight="@android:drawable/ic_menu_edit"
                android:text="@string/btEditar" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_bts_dashboard"
            android:paddingLeft="@dimen/padding_bts_dashboard"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            >
            <Button
                android:id="@+id/btRotinaDiaria"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_round_border2"
                android:text="@string/btRotinaDiaria" />
            <Button
                android:id="@+id/btGerAtividades"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_bts_dashboard"
                android:background="@drawable/button_round_border2"
                android:text="@string/btGerAtividades" />
            <Button
                android:id="@+id/btAddAtividadeFora"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_bts_dashboard"
                android:background="@drawable/button_round_border2"
                android:text="@string/btAddAtividadeFora" />
            <Button
                android:id="@+id/btAtvsAgendadas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_bts_dashboard"
                android:background="@drawable/button_round_border2"
                android:text="@string/btAtvsAgendadas" />
            <Button
                android:id="@+id/btEditarPreferencias"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_bts_dashboard"
                android:background="@drawable/button_round_border2"
                android:text="@string/btEditarPreferencias" />
            <Button
                android:id="@+id/btTempoMax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_bts_dashboard"
                android:background="@drawable/button_round_border2"
                android:text="@string/btTempoMax" />
            <Button
                android:id="@+id/btVolMax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_bts_dashboard"
                android:background="@drawable/button_round_border2"
                android:text="@string/btVolMax" />

        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>