<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="184dp"
                android:layout_height="190dp"
                app:srcCompat="@drawable/criancas" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temail"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="200dp"
                android:text="@string/e_mail"
                android:textAppearance="@style/label" />

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_round"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/tsenha"
                android:layout_width="71dp"
                android:layout_height="26dp"
                android:layout_marginTop="20dp"
                android:text="@string/senha"
                android:textAppearance="@style/label"

                />

            <EditText
                android:id="@+id/senhaLogin"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_round"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btEntrar"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_round_border"
                android:text="@string/button" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/cadastro"
                    android:textAppearance="@style/label_menor"

                    />
                <Button
                    android:id="@+id/btCadastrese"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/btCadastre"
                    android:textAppearance="@style/label_menor"
                    android:background="@drawable/edit_round"
                    android:layout_toRightOf="@+id/label"
                    android:layout_marginLeft="10dp"
                    />
            </RelativeLayout>


            <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:text="@string/acesse"
                android:textAppearance="@style/label_menor" />


            <Button
                android:id="@+id/esqueciSenha"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_round_border"
                android:text="@string/esqueciSenha"
                />
        </LinearLayout>


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>