<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.CadastrarAtividadeCompleto">
    <RelativeLayout
        android:id="@+id/responsive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btAjuda"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_round_border"
            android:drawableRight="@android:drawable/ic_menu_help"
            android:text="@string/btAjuda" />
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scrollForm"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="600dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/responsive"
        app:layout_constraintVertical_weight="3">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >
            <ImageButton
                android:id="@+id/btUploadImg"
                android:layout_width="310dp"
                android:layout_height="180dp"
                app:srcCompat="@drawable/add_img"
                android:layout_margin="10dp"/>
            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="310dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                />

            <LinearLayout
                android:id="@+id/form"
                android:layout_below="@+id/imgIcon"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tatividade"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_gravity="left"
                    android:text="@string/atividade"
                    android:textAppearance="@style/label" />
                <EditText
                    android:id="@+id/nome_atividade"
                    android:layout_width="@dimen/width_edit"
                    android:layout_height="@dimen/height_edit"
                    android:layout_marginTop="@dimen/margin_top_editar"
                    android:background="@drawable/edit_round" />
                <TextView
                    android:id="@+id/thorario"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/margin_top_cadastro"
                    android:text="@string/horario"
                    android:textAppearance="@style/label" />

                <EditText
                    android:id="@+id/horario"
                    android:layout_width="@dimen/width_edit"
                    android:layout_height="@dimen/height_edit"
                    android:layout_marginTop="@dimen/margin_top_editar"
                    android:background="@drawable/edit_round"
                    android:focusableInTouchMode="false"/>
                <TextView
                    android:id="@+id/tmusica"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/margin_top_cadastro"
                    android:text="@string/musica"
                    android:textAppearance="@style/label" />
                <EditText
                    android:id="@+id/musica"
                    android:layout_width="@dimen/width_edit"
                    android:layout_height="@dimen/height_edit"
                    android:layout_marginTop="@dimen/margin_top_editar"
                    android:background="@drawable/edit_round" />

                <TextView
                    android:id="@+id/tdias"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:text="@string/dias_semana"
                    android:layout_marginTop="@dimen/margin_top_editar"
                    android:textAppearance="@style/label"
                    android:layout_gravity="left"/>
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp">
                        <TextView
                            android:id="@+id/dom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dom"
                            />
                        <CheckBox
                            android:id="@+id/checkbox_dom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/dom"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp">
                        <TextView
                            android:id="@+id/seg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seg"
                            />
                        <CheckBox
                            android:id="@+id/checkbox_seg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/seg"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp">
                        <TextView
                            android:id="@+id/ter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ter"
                            />
                        <CheckBox
                            android:id="@+id/checkbox_ter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ter"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp">
                        <TextView
                            android:id="@+id/qua"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/qua"
                            />
                        <CheckBox
                            android:id="@+id/checkbox_qua"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/qua"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp">
                        <TextView
                            android:id="@+id/qui"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/qui"
                            />
                        <CheckBox
                            android:id="@+id/checkbox_qui"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/qui"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp">
                        <TextView
                            android:id="@+id/sex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sex"
                            />
                        <CheckBox
                            android:id="@+id/checkbox_sex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/sex"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp">
                        <TextView
                            android:id="@+id/sab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sab"
                            />
                        <CheckBox
                            android:id="@+id/checkbox_sab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/sab"
                            />
                    </RelativeLayout>

                </LinearLayout>
                <TextView
                    android:id="@+id/tPassos"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:text="@string/passos"
                    android:layout_marginTop="@dimen/margin_top_editar"
                    android:textAppearance="@style/label"
                    android:layout_marginBottom="@dimen/margin_top_editar"
                    android:layout_gravity="left"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewHorizontal"
                    android:background="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal"
                    tools:listitem="@layout/recyclerview_adapter_horizontal"/>
                <Button
                    android:id="@+id/btAdicionarPasso"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="right"
                    android:background="@drawable/button_round_border"
                    android:layout_margin="5dp"
                    android:text="@string/btAddPassos"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/scrollForm"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="15dp"
        app:layout_constraintVertical_weight="1">
        <Button
            android:id="@+id/btCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@drawable/button_round"
            android:layout_margin="5dp"
            android:text="@string/btCancelar" />
        <Button
            android:id="@+id/btCadastrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@drawable/button_round"
            android:layout_margin="5dp"
            android:text="@string/btAtualizar"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>