<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.PopupDeletarAtividadeActivity">
    <RelativeLayout
        android:id="@+id/popup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/button_round_border2"
        >
        <TextView
            android:id="@+id/deletar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/label_menor"
            android:text="@string/deletar"
            android:textAppearance="@style/label"

            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/deletar">
            <Button
                android:id="@+id/btCancelar"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:background="@drawable/button_round_border2"
                android:text="@string/btCancelar" />
            <Button
                android:id="@+id/btConfirmar"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:background="@drawable/button_round_delete"
                android:text="@string/btExcluir" />
        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>